fix font issuer on mobile

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,6 +36,9 @@ h4, .small {
     line-height: 1.25em;
     font-weight: bold;
 }
+p {
+    font-size: 1rem;
+}
 a {
     color:#056E90;
 }
